<resources>
    <string name="app_name">YeoDam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="find">검색할 내용을 입력하세요.</string>
    <string name="findBtn">찾기</string>
    <string name="tab1">탭1</string>
    <string name="first">맨앞으로</string>
    <string name="last">맨뒤로</string>
    <string name="quest">할 일</string>
    <string name="back_button">뒤로가기</string>
    <string name="more">자세히보기</string>
    <string name="addPlan">일정담기</string>
    <string name="hashtag">#가을동화 #준서 #은서</string>
    <string name="content">준서는 미국에서 돌아와 은서의 행방을\n 수소문하던중 둘의 추억이 어린 바닷가에서 \n다시 재회하게 된다.</string>
    <string name="more_followMe">따라해보세요!</string>
    <string name="more_followMe_sub">갯배위에서 타이타닉 장면을 따라해보세요!</string>
    <string name="moreInfo">갯배선착장\n위치 : 강원 속초기 청호동\n전화번호 : 033-633-3171\n영업정보 : \n    요금 : 소인(100원), 대인(200원)
    \n영업시간 : 04:30 ~ 23:00</string>
</resources>
