<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:background="#E8E8E9"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        >
        <LinearLayout
            android:background="#ffffff"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"

            android:padding="20dp"
            android:weightSum="18"
            >
            <TextView
                android:id="@+id/fragment_title"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="28dp"

                />
            <TextView
                android:id="@+id/fragment_subtitle"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textSize="25dp"
                />
            <TextView
                android:id="@+id/fragment_hash_tag"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textSize="17dp"
                android:text="@string/hashtag"/>


            <ImageView
                android:id="@+id/theme_content_img"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="6"
                android:scaleType="fitXY"
                android:src = "@drawable/p1"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/text_fragment"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/content"

                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical|center_horizontal">
                <Button
                    android:id="@+id/view_more_1"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/more"
                    android:background="#00CCCB"
                    android:textSize="17dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/addplan_1"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/addPlan"
                    android:layout_marginLeft="18dp"
                    android:background="#00CCCB"
                    android:textSize="17dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>